<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_1">1. Which one of these is in capital of India?</string>
    <string name="question_2">2. Which one of these logos falls under the Automotive sector?</string>
    <string name="question_3">3. What is the name of this place ?</string>
    <string name="question_4">4. What is the currency of India ?</string>
    <string name="question_5">5. Which of them are shopping portals ?</string>
</resources>
