<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.ashutosh_sadana.quizapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ques1_layout"
        style="@style/ques_layout_style">

        <TextView
            style="@style/ques_style"
            android:text="@string/question_1"/>

        <RadioGroup
            android:id="@+id/ques1_radio_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ques1_radio1"
                android:text="Gateway Of India"
                style="@style/radio_button_style"
                />

            <RadioButton
                android:id="@+id/ques1_radio2"
                android:text="Charminar"
                style="@style/radio_button_style"
                />

            <RadioButton
                android:id="@+id/ques1_radio3"
                android:text="India Gate"
                style="@style/radio_button_style"
                />
        </RadioGroup>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ques2_layout"
            style="@style/ques_layout_style">

            <TextView
                style="@style/ques_style"
                android:text="@string/question_2"/>

            <RadioGroup
                android:id="@+id/ques2_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques2_radio1"
                    android:text=""
                    style="@style/radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/ques2_radio2"
                    android:text=""
                    style="@style/radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/ques2_radio3"
                    android:text=""
                    style="@style/radio_button_style"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/radio_grp_linear_layout_style">

                    <ImageView
                        android:id="@+id/ques2_logo1"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/amazon_logo"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_grp_linear_layout_style">

                    <ImageView
                        android:id="@+id/ques2_logo2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/bmw_logo"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_grp_linear_layout_style">

                    <ImageView
                        android:id="@+id/ques2_logo3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/lulu_logo"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/ques3_layout"
            style="@style/ques_layout_style">
            <TextView
                style="@style/ques_style"
                android:text="@string/question_3"/>

            <ImageView
                android:id="@+id/ques3_logo"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/taj_mahal"/>

            <EditText
                android:id="@+id/ques3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ques4_layout"
            style="@style/ques_layout_style">

            <TextView
                style="@style/ques_style"
                android:text="@string/question_4"/>

            <RadioGroup
                android:id="@+id/ques_4_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques4_radio1"
                    android:text=""
                    style="@style/radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/ques4_radio2"
                    android:text=""
                    style="@style/radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/ques4_radio3"
                    android:text=""
                    style="@style/radio_button_style"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/radio_grp_linear_layout_style">

                    <ImageView
                        android:id="@+id/ques4_logo1"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ruppee_logo"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_grp_linear_layout_style">

                    <ImageView
                        android:id="@+id/ques4_logo2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/yen_logo"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_grp_linear_layout_style">

                    <ImageView
                        android:id="@+id/ques4_logo3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/dollar_logo"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ques5_layout"
            style="@style/ques_layout_style">

            <TextView
                style="@style/ques_style"
                android:text="@string/question_5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/ques5_checkbox1"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/ques5_logo1"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/jabong_logo"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/ques5_checkbox2"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/ques5_logo2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/toyota_logo"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/ques5_checkbox3"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/ques5_logo3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ebay_logo"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:onClick="submitQuiz"/>

    </LinearLayout>



</ScrollView>
